# milli

./: .gitignore  Cargo.toml  build_and_run.sh  docker-compose.yml
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
src/: app.rs  database.rs  main.rs  state.rs
src/application/services/: data_source_service.rs  mod.rs
src/application/use_cases/: mod.rs
src/config/: application.rs  mod.rs
src/controllers/api/: api_controller.rs  data_source_controller.rs  index_controller.rs  index_data_query_controller.rs  mod.rs
src/db/: data_source.rs  mod.rs  user.rs
src/domain/: mod.rs
src/domain/clients/: meilisearch_client_trait.rs  mod.rs
src/domain/data_source/: mod.rs
src/domain/repository/: data_source_repository.rs  data_source_repository_trait.rs  index_data_query_repository_trait.rs  mod.rs
src/infrastructure/repositories/: data_source_repository.rs  index_data_query_repository.rs  mod.rs
src/models/: data_source.rs
src/presentation/: mod.rs
src/presentation/cli/: cli_app.rs  mod.rs
src/presentation/requests/: mod.rs
src/queues/application/: mod.rs  queue_service.rs
src/queues/domain/: job_repository.rs  mod.rs
src/repositories/: data_source_repository.rs  mod.rs
src/requests/: mod.rs
src/requests/data_source/: mod.rs  store_data_source_request.rs  (+1 more)
src/services/: data_source_service.rs  mod.rs
src/utilits/: datetime_extension.rs  mod.rs
static/: 404.html  about.html  index.html
static/_app/: version.json
(+114 files in other folders)
