[package]
name = "milli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1.0.137"
meilisearch-sdk = "0.30.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
colored = "3.0.0"
chrono = "0.4.42"
anyhow = "1.0.78"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"