[package]
name = "milli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite= { version = "0.28.0" }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde_json = "1.0.137"
meilisearch-sdk = "0.30.0"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
colored = "3.0.0"
chrono = "0.4.42"
anyhow = "1.0.78"
r2d2 = "0.8.10"
tracing-subscriber = "0.3.20"
sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "runtime-tokio"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
